enhance(vax,vietnam): collect from WHO
Official source is too unreliable (the format is constantly changing)

--- a/scripts/src/cowidev/vax/utils/orgs/who_config.yaml
+++ b/scripts/src/cowidev/vax/utils/orgs/who_config.yaml
@@ -236,8 +236,8 @@ countries:
     owid_name: "Uganda"
   - org_name: "United Republic of Tanzania"
     owid_name: "Tanzania"
-  # - org_name: "Vanuatu"
-  #   owid_name: "Vanuatu"
+  - org_name: "Viet Nam"
+    owid_name: "Vietnam"
   - org_name: "Yemen"
     owid_name: "Yemen"
   - org_name: "Zambia"
