enhance(vax,venezuela): collect from WHO

--- a/scripts/src/cowidev/vax/utils/orgs/who_config.yaml
+++ b/scripts/src/cowidev/vax/utils/orgs/who_config.yaml
@@ -236,6 +236,8 @@ countries:
     owid_name: "Uganda"
   - org_name: "United Republic of Tanzania"
     owid_name: "Tanzania"
+  - org_name: "Venezuela (Bolivarian Republic of)"
+    owid_name: "Venezuela"
   - org_name: "Viet Nam"
     owid_name: "Vietnam"
   - org_name: "Yemen"
