enhance(vax): add Turkovac to WHO vaccine list

--- a/scripts/src/cowidev/vax/utils/orgs/who_config.yaml
+++ b/scripts/src/cowidev/vax/utils/orgs/who_config.yaml
@@ -70,6 +70,8 @@ vaccines:
     org_name: "Shifa - COVIran Barakat"
   - owid_name: "ZyCoV-D"
     org_name: "Zydus - ZyCov-D"
+  - owid_name: "Turkovac"
+    org_name: "Turkovac"
 
 countries:
   - org_name: "Afghanistan"
