--- a/scripts/src/cowidev/vax/utils/orgs/who_config.yaml
+++ b/scripts/src/cowidev/vax/utils/orgs/who_config.yaml
@@ -148,6 +148,8 @@ countries:
   #   owid_name: "Iran"
   - org_name: "Iraq"
     owid_name: "Iraq"
+  - org_name: "Jordan"
+    owid_name: "Jordan"
   - org_name: "Kuwait"
     owid_name: "Kuwait"
   - org_name: "Lao People's Democratic Republic"
