--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,7 +1,6 @@
-beautifulsoup4==4.9.3
-chromedriver-binary==87.0.4280.88.0
-dateparser==1.1.0
-facebook-scraper==0.2.45
+beautifulsoup4~=4.9.0
+# chromedriver-binary==87.0.4280.88.0
+dateparser~=1.1.0
 gsheets==0.5.1
 joblib==1.0.1
 lxml>=4.6.3
@@ -11,7 +10,7 @@ openpyxl==3.0.7
 pandas~=1.3.0
 pdfreader==0.1.10
 PyMySQL==0.9.3
-PyPDF2==1.26.0
+PyPDF2~=1.26.0
 python-dotenv~=0.18.0
 PyYAML==5.4.1
 pyaml-env~=1.1.0
