chore: ignore untitled notebooks

--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,7 @@ scripts/subnational_cases_deaths.zip
 scripts/*.ipynb
 scripts/notebooks/
 scripts/scripts/testing/automations/incremental/Untitled.ipynb
-Untitled.ipynb
+Untitled*.ipynb
 
 # Misc (Cam)
 misc/
