refactor(vax,uzbekistan): collect from WHO
The national source only reports part of what we need, whereas the WHO data has all metrics.

--- a/scripts/src/cowidev/vax/utils/orgs/who_config.yaml
+++ b/scripts/src/cowidev/vax/utils/orgs/who_config.yaml
@@ -238,6 +238,8 @@ countries:
     owid_name: "Tuvalu"
   - org_name: "Uganda"
     owid_name: "Uganda"
+  - org_name: "Uzbekistan"
+    owid_name: "Uzbekistan"
   - org_name: "United Republic of Tanzania"
     owid_name: "Tanzania"
   - org_name: "Venezuela (Bolivarian Republic of)"
