data(vax,austria): collect from ECDC / fix #2420

--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -13,6 +13,7 @@ pipeline:
       - North Macedonia
       - South Africa
       - africacdc
+      - Austria
       # - Faeroe Islands
   process-data:
     skip_complete:
