--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,5 +1,4 @@
 beautifulsoup4~=4.9.0
-# chromedriver-binary==87.0.4280.88.0
 boto3==1.18.43
 click~=8.0.0
 dateparser~=1.1.0
@@ -13,15 +12,17 @@ odfpy~=1.4.1
 openpyxl==3.0.7
 pandas~=1.3.0
 pdfminer.six==20211012
+Pillow==9.0.1
 psutil~=5.9.0
 py-cpuinfo~=8.0.0
+pyaml-env~=1.1.0
 PyDrive~=1.3.0
 PyMySQL==0.9.3
-python-dotenv~=0.18.0
-PyYAML==5.4.1
-pyaml-env~=1.1.0
 pyperclip==1.8.2
+python-dateutil~=2.8.0
+python-dotenv~=0.18.0
 pytz==2021.3
+PyYAML==5.4.1
 requests~=2.27.0
 selenium==3.141.0
 slackclient==2.9.3
@@ -33,6 +34,5 @@ tweepy~=3.10.0
 uk-covid19~=1.2.0
 Unidecode~=1.2.0
 xlrd==2.0.1
-XlsxWriter==1.4.3
 xlsx2csv==0.7.8
-python-dateutil~=2.8.0
+XlsxWriter==1.4.3
