--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -28,6 +28,7 @@ selenium==3.141.0
 slackclient==2.9.3
 TableauScraper~=0.1.0
 tabula-py==2.2.0
+tabulate==0.8.9
 termcolor==1.1.0
 tqdm==4.61.1
 tweepy~=3.10.0
