data(vax,acdc): add mali

--- a/scripts/src/cowidev/vax/utils/orgs/acdc_all_config.yaml
+++ b/scripts/src/cowidev/vax/utils/orgs/acdc_all_config.yaml
@@ -61,6 +61,8 @@ countries:
     owid_name: "Libya"
   - org_name: "Madagascar"
     owid_name: "Madagascar"
+  - org_name: "Mali"
+    owid_name: "Mali"
   - org_name: "Mauritania"
     owid_name: "Mauritania"
   - org_name: "Mauritius"
