--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -54,6 +54,8 @@ pipeline:
       countries: 
       skip_countries:
         - Benin #the source is n longer updating
+        - Kazakhstan
+        - Lebanon
     process:
     generate:
     export:
