--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: true
 contact_links:
-  - name: Feature request (and other issues)
+  - name: Feature request
     url: https://github.com/owid/covid-19-data/discussions/categories/ideas
-    about: Feature requests may be raised as an "Ideas" discussion.
+    about: Are we missing something? Feature requests may be raised as an "Ideas" discussion.
